--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
+bon = "3.3"
 crossterm = { version = "0.28", features = ["event-stream"] }
 futures = "0.3"
 rand = { version = "0.9", features = ["small_rng"] }
