--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ ratatui = "0.29"
 strum = "0.26"
 strum_macros = "0.26"
 tokio = { version = "1", features = ["full"] }
+tui-popup = "0.6.0"
+tui-prompts = "0.5.0"
